feat(argo-cd): added ability to install server ingress in different namespace than Release
Signed-off-by: Jacek Domagalski <domagalski.j@gmail.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1693,6 +1693,8 @@ server:
   ingress:
     # -- Enable an ingress resource for the Argo CD server
     enabled: false
+    # -- Install ingress in the different namespace than Release 
+    namespace: ""
     # -- Additional ingress annotations
     annotations: {}
     # -- Additional ingress labels
