--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -714,7 +714,15 @@ controller:
     rules:
       # -- Deploy a PrometheusRule for the application controller
       enabled: false
-      # -- PrometheusRule.Spec for the application controller
+      # -- PrometheusRule namespace
+      namespace: "" # "monitoring"
+    
+      selector: {}
+      # prometheus: kube-prometheus
+      additionalLabels: {}
+      annotations: {}
+    
+    # -- PrometheusRule.Spec for the application controller
       spec: []
       # - alert: ArgoAppMissing
       #   expr: |
@@ -740,11 +748,6 @@ controller:
       #       The application [{{`{{$labels.name}}`}} has not been synchronized for over
       #       12 hours which means that the state of this cloud has drifted away from the
       #       state inside Git.
-    #   selector:
-    #     prometheus: kube-prometheus
-    #   namespace: monitoring
-    #   additionalLabels: {}
-    #   annotations: {}
 
   ## Enable this and set the rules: to whatever custom rules you want for the Cluster Role resource.
   ## Defaults to off
