Added description of change
Signed-off-by: ugoogalizer <signup@mattcurtis.id.au>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,5 +23,6 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - kind: fixed
-      description: Fixed typos in values.yaml and README.md
+    - kind: added
+      description: Added pod exec permission to argo-server Role when exec.enabled is True.
+      
