--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1068,6 +1068,8 @@ redis:
   exporter:
     # -- Enable Prometheus redis-exporter sidecar
     enabled: false
+    # -- Environment variables to pass to the Redis exporter
+    env: []
     ## Prometheus redis-exporter image
     image:
       # -- Repository to use for the redis-exporter
