--- a/charts/argocd-apps/ci/applications-values.yaml
+++ b/charts/argocd-apps/ci/applications-values.yaml
@@ -20,7 +20,7 @@ applications:
     automated:
       prune: false
       selfHeal: false
-  revisionHistoryLimit: 5
+  revisionHistoryLimit: null
   ignoreDifferences:
   - group: apps
     kind: Deployment
