correct change entry
Signed-off-by: Ian Martin <ian@imartin.net>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -23,17 +23,5 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - kind: added
+    - kind: fixed
       description: ApplicationSet utilizes global tolerations
-    - kind: added
-      description: Global nodeSelector configuration
-    - kind: added
-      description: Global tolerations configuration
-    - kind: added
-      description: Global topologySpreadConstraints configuration
-    - kind: added
-      description: Missing component level topologySpreadConstraints configuration
-    - kind: added
-      description: Missing component level priorityClassName configuration
-    - kind: changed
-      description: Global affinity preset can be disabled
