--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v2.6.3
 kubeVersion: ">=1.22.0-0"
 description: A Helm chart for Argo CD, a declarative, GitOps continuous delivery tool for Kubernetes.
 name: argo-cd
-version: 5.24.0
+version: 5.24.1
 home: https://github.com/argoproj/argo-helm
 icon: https://argo-cd.readthedocs.io/en/stable/assets/logo.png
 sources:
@@ -23,15 +23,5 @@ dependencies:
     condition: redis-ha.enabled
 annotations:
   artifacthub.io/changes: |
-    - kind: added
-      description: Global nodeSelector configuration
-    - kind: added
-      description: Global tolerations configuration
-    - kind: added
-      description: Global topologySpreadConstraints configuration
-    - kind: added
-      description: Missing component level topologySpreadConstraints configuration
-    - kind: added
-      description: Missing component level priorityClassName configuration
-    - kind: changed
-      description: Global affinity preset can be disabled
+    - kind: fixed
+      description: ApplicationSet utilizes global tolerations
