--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -736,6 +736,17 @@ controller:
     rules:
       # -- Deploy a PrometheusRule for the application controller
       enabled: false
+      # -- PrometheusRule namespace
+      namespace: "" # "monitoring"
+      # -- PrometheusRule selector
+      selector: {}
+        # prometheus: kube-prometheus
+
+      # -- PrometheusRule labels
+      additionalLabels: {}
+      # -- PrometheusRule annotations
+      annotations: {}
+
       # -- PrometheusRule.Spec for the application controller
       spec: []
       # - alert: ArgoAppMissing
@@ -762,11 +773,6 @@ controller:
       #       The application [{{`{{$labels.name}}`}} has not been synchronized for over
       #       12 hours which means that the state of this cloud has drifted away from the
       #       state inside Git.
-    #   selector:
-    #     prometheus: kube-prometheus
-    #   namespace: monitoring
-    #   additionalLabels: {}
-    #   annotations: {}
 
   ## Enable this and set the rules: to whatever custom rules you want for the Cluster Role resource.
   ## Defaults to off
